--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -5,6 +5,7 @@ $purple: #8918fb !default;
 $black: #000000 !default;
 $white: #ffffff !default;
 $red: #D8263B !default;
+$grey: #474747 !default;
 
 /* Typography */
 
